--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -35,79 +35,9 @@ header{
     clear:both;
 }
 
-.user{
-    @include span-columns(4 omega,10);
-    padding-top:1em;
-}
-.userSpace{
-    @include span-columns(1,4);
-    border-right: 0.3em solid white;
-    box-sizing: border-box;
-}
-
-.userConnexion{
-    @include span-columns(3 omega,4);
-    position:relative;
-    color:black;
-    a{
-        color:black;
-        font-size: 0.8em;
-        margin-top: 0.4em;
-    }
-    input{
-        @include span-columns(2.5,3);
-        box-sizing: border-box;
-    }
-    h3{
-        background-color: white;
-        cursor: default;
-        color:black;
-        padding:0.3em;
-        display:inline-block;
-        border-radius: 0.5em;
-    }
-    h3:hover+form, form:hover{
-        opacity:1;
-        height:auto;
-        display: block;
-        padding-left: 12%;
-        box-shadow: 0px 0px 8px;
-    }
-
-    form{
-        background-color: white;
-        padding:0.6em;
-        position:absolute;
-        display: none;
-        opacity:0;
-    }
-}
-
-[type="text"],[type="password"]{
-    background-color: transparent;
-    border: 1px solid black;
-    border-radius: 0.2em;
-    padding:0.4em;
-    margin-top: 0.6em;
-    color:black;
-}
-
-input:focus{
-border: 1px solid #FF7C00;
-}
-
-.userConnexion:hover{
-    >h3{
-        border-top-left-radius: 0.5em;
-        border-top-right-radius: 0.5em;
-        border-bottom-left-radius: 0em;
-        border-bottom-right-radius: 0em;
-    }
-}
-
 html{
     font-family: Verdana, Geneva, sans-serif;
-    line-height: 1.5em;
+    line-height: 1.4em;
     a{
         color:black;
         text-decoration: none;
@@ -115,6 +45,9 @@ html{
     }
     a:hover{
         color:#5DC8CD;
+    }
+    p{
+        margin-bottom: 0.8em;
     }
 }
 
@@ -149,6 +82,94 @@ box-shadow: 0 0.5em 0 #01938A;
 
 h1,h2,h3,h4,h5,h6{font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; }
 
+
+/////////----------------------------------------------------------------------------------
+/////////Connexion home  ------------------------------------------------------------------
+/////////----------------------------------------------------------------------------------
+
+.user{
+    @include span-columns(4 omega,10);
+    padding-top:1em;
+}
+
+[id="flash_notice"] span{
+    padding:0.3em;
+    border-radius: 0.3em;
+    color:white;
+    background-color: #01939A;
+}
+
+.userConnexion{
+    text-align: right;
+    position:relative;
+    box-sizing: border-box;
+    color:black;
+    a{
+        color:black;
+    }
+    input{
+        @include span-columns(2.5,3);
+        box-sizing: border-box;
+    }
+    h3{
+        background-color: white;
+        cursor: default;
+        display:inline-block;
+        border-radius: 0.5em;
+        margin-bottom: 0.5em;
+        a{
+            border:none;
+            color:#01938A;
+            padding:0.6em;
+            display:inline-block;   
+        }
+        a:hover{
+            text-decoration: underline;
+        }
+        
+    }
+    h3:hover+form, form:hover{
+        opacity:1;
+        height:auto;
+        display: block;
+        padding-left: 12%;
+        box-shadow: 0px 0px 8px;
+    }
+
+    form{
+        background-color: white;
+        padding:0.6em;
+        position:absolute;
+        display: none;
+        opacity:0;
+    }
+}
+
+[type="text"],[type="password"]{
+    background-color: transparent;
+    border: 1px solid black;
+    border-radius: 0.2em;
+    padding:0.4em;
+    margin-top: 0.6em;
+    color:black;
+}
+
+input:focus{
+border: 1px solid #FF7C00;
+}
+
+.userConnexion:hover{
+    >h3{
+        // border-top-left-radius: 0.5em;
+        // border-top-right-radius: 0.5em;
+        // border-bottom-left-radius: 0em;
+        // border-bottom-right-radius: 0em;
+    }
+}
+
+
+
+
 /////////----------------------------------------------------------------------------------
 /////////Menu de navigation  --------------------------------------------------------------
 /////////----------------------------------------------------------------------------------
@@ -159,8 +180,7 @@ nav{
     ul{
     color:black;
     width:100%;
-    color:black;
-    margin:1.5em 0;
+    margin:1.7em 0;
 
         li:first-child{
             border:none;
@@ -169,7 +189,7 @@ nav{
             display: inline-block;
             @include box-sizing(border-box);
             width:16.6666667%;
-            background-color: white;
+            background-color: rgba(255,255,255,0.95);
             border-left: 0.2em solid #FF7600;
             a{
                 text-align: center;
@@ -179,7 +199,7 @@ nav{
                 
             }
             a:hover{
-                background-color: #01938A;
+                background-color: rgba(1, 147, 154,0.6);
                 color:white;
             }
         }
@@ -200,7 +220,7 @@ h2{
     padding: 0.5em 0;
 }
 
-.racesList{
+.list{
     h3{
         background-color: #01939A;
         color: white;
@@ -267,7 +287,7 @@ section{
 /////////Formulaire de recherche de course ------------------------------------------------
 /////////----------------------------------------------------------------------------------
 
-.findRace{
+.find{
     background-color: rgba(0,0,0,0.8);
     color:white;
     padding: 1.5em;
@@ -283,7 +303,7 @@ section{
     label{
         @include span-columns(1.5,4.5);
         text-align: right;
-        padding:0.3em;
+        padding:0.35em 0;
         margin-bottom: 0.6em;
         @include box-sizing(border-box);
     }
@@ -300,11 +320,44 @@ section{
         background: url(../img/down_arrow_select.jpg) no-repeat right #ddd;
         margin-bottom: 0.6em;
     }
+    select:hover{
+        cursor:pointer;
+    }
     input{
         @include span-columns(3 omega ,4.5);
         margin-top: 0;
+        @include box-sizing(border-box);
     }
 
+}
+.find:after{
+    content:"";
+    display:block;
+    clear:both;
+}
+
+[type="text"],[type="password"]{
+    background-color: white;
+    border: 1px solid #01938A;
+    border-radius: 0.5em;
+    color:black;
+    font-size: 1em;
+    padding:0.6em;
+    margin-bottom: 0.6em;
+}
+
+input[type="date"]{
+    -webkit-appearance: none;
+        -moz-appearance: none;
+        margin:0;
+        font-size: 1em;
+        border:none;
+        border-radius: 0.5em;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        @include span-columns(3 omega,4.5);
+        padding:0.5em;
+        margin-bottom: 0.6em;
 }
 
 .left{
@@ -315,6 +368,60 @@ section{
     @include span-columns(5 omega,10);
 }
 
+.login{
+    .left{
+        margin-left:25%;
+        label{
+            padding:0.55em 0;
+            margin-bottom: 0.6em;
+        }
+    }
+}
+
+/////////----------------------------------------------------------------------------------
+/////////News -----------------------------------------------------------------------------
+/////////----------------------------------------------------------------------------------
 
 
+.news{
+    h2{
+        margin-bottom: 1em;
+    }
+    a:nth-child(2){
+        @include span-columns(6,10);
+        figure img{
+            @include span-columns(2,6);
+                max-width: 100%;
+            margin-top: 0.3em;
+        }
+    }
+    a{
+        display:inline-block;
+        @include box-sizing(border-box);
+        padding: 0.6em;
+        background-color: rgba(1, 147, 154,0.3);;
+        margin-bottom: 2.04082%;
+        border:none;
+        transition: background-color, 0.5s;
+        h3{
+            margin-bottom: 0.8em;
+            span{
+                float: right;
+                font-size: 0.8em;
+                color: white;
+            }
+        }
+        @include span-columns(4 omega,10);
+        figure img{
+            @include span-columns(2,4);
+            max-width: 100%;
+            margin-top: 0.3em;
+            border: 0.3em solid white
+        }
+    }
+    a:hover{
+        color:black;
+        background-color: rgba(1, 147, 154,0.6);;
 
+    }
+}
