--- a/public/styles/screen.css
+++ b/public/styles/screen.css
@@ -89,125 +89,46 @@ header h1 {
   clear: both; }
 
 /* line 38, ../sass/screen.scss */
-.user {
-  width: 38.77551%;
-  float: right;
-  margin-right: 0;
-  *margin-left: -1em;
-  display: inline;
-  padding-top: 1em; }
-
-/* line 42, ../sass/screen.scss */
-.userSpace {
-  width: 21.05263%;
-  float: left;
-  margin-right: 5.26316%;
-  display: inline;
-  border-right: 0.3em solid white;
-  box-sizing: border-box; }
-
-/* line 48, ../sass/screen.scss */
-.userConnexion {
-  width: 73.68421%;
-  float: right;
-  margin-right: 0;
-  *margin-left: -1em;
-  display: inline;
-  position: relative;
-  color: black; }
-  /* line 52, ../sass/screen.scss */
-  .userConnexion a {
-    color: black;
-    font-size: 0.8em;
-    margin-top: 0.4em; }
-  /* line 57, ../sass/screen.scss */
-  .userConnexion input {
-    width: 85.71429%;
-    float: left;
-    margin-right: 7.14286%;
-    display: inline;
-    box-sizing: border-box; }
-  /* line 61, ../sass/screen.scss */
-  .userConnexion h3 {
-    background-color: white;
-    cursor: default;
-    color: black;
-    padding: 0.3em;
-    display: inline-block;
-    border-radius: 0.5em; }
-  /* line 69, ../sass/screen.scss */
-  .userConnexion h3:hover + form, .userConnexion form:hover {
-    opacity: 1;
-    height: auto;
-    display: block;
-    padding-left: 12%;
-    box-shadow: 0px 0px 8px; }
-  /* line 77, ../sass/screen.scss */
-  .userConnexion form {
-    background-color: white;
-    padding: 0.6em;
-    position: absolute;
-    display: none;
-    opacity: 0; }
-
-/* line 86, ../sass/screen.scss */
-[type="text"], [type="password"] {
-  background-color: transparent;
-  border: 1px solid black;
-  border-radius: 0.2em;
-  padding: 0.4em;
-  margin-top: 0.6em;
-  color: black; }
-
-/* line 95, ../sass/screen.scss */
-input:focus {
-  border: 1px solid #FF7C00; }
-
-/* line 100, ../sass/screen.scss */
-.userConnexion:hover > h3 {
-  border-top-left-radius: 0.5em;
-  border-top-right-radius: 0.5em;
-  border-bottom-left-radius: 0em;
-  border-bottom-right-radius: 0em; }
-
-/* line 108, ../sass/screen.scss */
 html {
   font-family: Verdana, Geneva, sans-serif;
-  line-height: 1.5em; }
-  /* line 111, ../sass/screen.scss */
+  line-height: 1.4em; }
+  /* line 41, ../sass/screen.scss */
   html a {
     color: black;
     text-decoration: none;
     border-bottom: 1px dotted black; }
-  /* line 116, ../sass/screen.scss */
+  /* line 46, ../sass/screen.scss */
   html a:hover {
     color: #5DC8CD; }
+  /* line 49, ../sass/screen.scss */
+  html p {
+    margin-bottom: 0.8em; }
 
-/* line 121, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 h1 {
   font-size: 2em; }
 
-/* line 122, ../sass/screen.scss */
+/* line 55, ../sass/screen.scss */
 h2 {
   font-size: 1.5em; }
 
-/* line 123, ../sass/screen.scss */
+/* line 56, ../sass/screen.scss */
 h3 {
   font-size: 1.17em; }
 
-/* line 124, ../sass/screen.scss */
+/* line 57, ../sass/screen.scss */
 h4 {
   font-size: 1em; }
 
-/* line 125, ../sass/screen.scss */
+/* line 58, ../sass/screen.scss */
 h5 {
   font-size: 0.83em; }
 
-/* line 126, ../sass/screen.scss */
+/* line 59, ../sass/screen.scss */
 h6 {
   font-size: 0.75em; }
 
-/* line 128, ../sass/screen.scss */
+/* line 61, ../sass/screen.scss */
 .content {
   *zoom: 1;
   max-width: 49em;
@@ -223,23 +144,23 @@ h6 {
     display: table;
     clear: both; }
   @media (min-width: 24em) {
-    /* line 128, ../sass/screen.scss */
+    /* line 61, ../sass/screen.scss */
     .content {
       max-width: 24em; } }
   @media (min-width: 44em) {
-    /* line 128, ../sass/screen.scss */
+    /* line 61, ../sass/screen.scss */
     .content {
       max-width: 44em; } }
   @media (min-width: 55em) {
-    /* line 128, ../sass/screen.scss */
+    /* line 61, ../sass/screen.scss */
     .content {
       max-width: 59em; } }
   @media (min-width: 65em) {
-    /* line 128, ../sass/screen.scss */
+    /* line 61, ../sass/screen.scss */
     .content {
       max-width: 69em; } }
 
-/* line 134, ../sass/screen.scss */
+/* line 67, ../sass/screen.scss */
 [type="submit"] {
   background-color: #FF7600;
   border: none;
@@ -252,58 +173,133 @@ h6 {
   color: white;
   text-shadow: 0 1px 1px black; }
 
-/* line 146, ../sass/screen.scss */
+/* line 79, ../sass/screen.scss */
 [type="submit"]:hover {
   box-shadow: 0 0.5em 0 #01938A; }
 
-/* line 150, ../sass/screen.scss */
+/* line 83, ../sass/screen.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; }
 
-/* line 159, ../sass/screen.scss */
+/* line 90, ../sass/screen.scss */
+.user {
+  width: 38.77551%;
+  float: right;
+  margin-right: 0;
+  *margin-left: -1em;
+  display: inline;
+  padding-top: 1em; }
+
+/* line 95, ../sass/screen.scss */
+[id="flash_notice"] span {
+  padding: 0.3em;
+  border-radius: 0.3em;
+  color: white;
+  background-color: #01939A; }
+
+/* line 102, ../sass/screen.scss */
+.userConnexion {
+  text-align: right;
+  position: relative;
+  box-sizing: border-box;
+  color: black; }
+  /* line 107, ../sass/screen.scss */
+  .userConnexion a {
+    color: black; }
+  /* line 110, ../sass/screen.scss */
+  .userConnexion input {
+    width: 85.71429%;
+    float: left;
+    margin-right: 7.14286%;
+    display: inline;
+    box-sizing: border-box; }
+  /* line 114, ../sass/screen.scss */
+  .userConnexion h3 {
+    background-color: white;
+    cursor: default;
+    display: inline-block;
+    border-radius: 0.5em;
+    margin-bottom: 0.5em; }
+    /* line 120, ../sass/screen.scss */
+    .userConnexion h3 a {
+      border: none;
+      color: #01938A;
+      padding: 0.6em;
+      display: inline-block; }
+    /* line 126, ../sass/screen.scss */
+    .userConnexion h3 a:hover {
+      text-decoration: underline; }
+  /* line 131, ../sass/screen.scss */
+  .userConnexion h3:hover + form, .userConnexion form:hover {
+    opacity: 1;
+    height: auto;
+    display: block;
+    padding-left: 12%;
+    box-shadow: 0px 0px 8px; }
+  /* line 139, ../sass/screen.scss */
+  .userConnexion form {
+    background-color: white;
+    padding: 0.6em;
+    position: absolute;
+    display: none;
+    opacity: 0; }
+
+/* line 148, ../sass/screen.scss */
+[type="text"], [type="password"] {
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 0.2em;
+  padding: 0.4em;
+  margin-top: 0.6em;
+  color: black; }
+
+/* line 157, ../sass/screen.scss */
+input:focus {
+  border: 1px solid #FF7C00; }
+
+/* line 180, ../sass/screen.scss */
 nav ul {
   color: black;
   width: 100%;
-  color: black;
-  margin: 1.5em 0; }
-  /* line 165, ../sass/screen.scss */
+  margin: 1.7em 0; }
+  /* line 185, ../sass/screen.scss */
   nav ul li:first-child {
     border: none; }
-  /* line 168, ../sass/screen.scss */
+  /* line 188, ../sass/screen.scss */
   nav ul li {
     display: inline-block;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     width: 16.6666667%;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.95);
     border-left: 0.2em solid #FF7600; }
-    /* line 174, ../sass/screen.scss */
+    /* line 194, ../sass/screen.scss */
     nav ul li a {
       text-align: center;
       display: block;
       padding: 0.8em;
       border: none; }
-    /* line 181, ../sass/screen.scss */
+    /* line 201, ../sass/screen.scss */
     nav ul li a:hover {
-      background-color: #01938A;
+      background-color: rgba(1, 147, 154, 0.6);
       color: white; }
 
-/* line 197, ../sass/screen.scss */
+/* line 217, ../sass/screen.scss */
 h2 {
   margin-left: -0.6em;
   border-left: 0.6em solid #FF7600;
   padding: 0.5em 0; }
 
-/* line 204, ../sass/screen.scss */
-.racesList h3 {
+/* line 224, ../sass/screen.scss */
+.list h3 {
   background-color: #01939A;
   color: white;
   text-align: center;
   padding: 0.6em;
   margin: 1em 0 0.5em; }
-/* line 211, ../sass/screen.scss */
-.racesList ul a {
+/* line 231, ../sass/screen.scss */
+.list ul a {
   border: none;
   padding: 0.6em;
   -webkit-box-sizing: border-box;
@@ -314,88 +310,88 @@ h2 {
   background-color: black;
   height: 100px;
   transition: background-color 0.5s; }
-  /* line 220, ../sass/screen.scss */
-  .racesList ul a h4 {
+  /* line 240, ../sass/screen.scss */
+  .list ul a h4 {
     text-align: center; }
-/* line 224, ../sass/screen.scss */
-.racesList ul a:hover {
+/* line 244, ../sass/screen.scss */
+.list ul a:hover {
   background-color: #FF7600; }
 
-/* line 230, ../sass/screen.scss */
+/* line 250, ../sass/screen.scss */
 .sevenFirst a:first-child {
   width: 38.77551%;
   float: left;
   margin-right: 2.04082%;
   display: inline;
   height: 222px; }
-/* line 235, ../sass/screen.scss */
+/* line 255, ../sass/screen.scss */
 .sevenFirst a {
   width: 18.36735%;
   float: left;
   margin-right: 2.04082%;
   display: inline; }
-  /* line 237, ../sass/screen.scss */
+  /* line 257, ../sass/screen.scss */
   .sevenFirst a:nth-child(3n) {
     float: right;
     margin-right: 0;
     *margin-left: -1em;
     display: inline; }
 
-/* line 243, ../sass/screen.scss */
+/* line 263, ../sass/screen.scss */
 .others a:nth-child(4) {
   width: 38.77551%;
   float: left;
   margin-right: 2.04082%;
   display: inline;
   height: 222px; }
-/* line 248, ../sass/screen.scss */
+/* line 268, ../sass/screen.scss */
 .others a {
   width: 18.36735%;
   float: left;
   margin-right: 2.04082%;
   display: inline; }
-  /* line 250, ../sass/screen.scss */
+  /* line 270, ../sass/screen.scss */
   .others a:nth-child(4n) {
     float: right;
     margin-right: 0;
     *margin-left: -1em;
     display: inline; }
 
-/* line 255, ../sass/screen.scss */
+/* line 275, ../sass/screen.scss */
 .month:after {
   content: "";
   display: block;
   clear: both; }
 
-/* line 261, ../sass/screen.scss */
+/* line 281, ../sass/screen.scss */
 section {
   margin-bottom: 3em; }
 
-/* line 270, ../sass/screen.scss */
-.findRace {
+/* line 290, ../sass/screen.scss */
+.find {
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
   padding: 1.5em; }
-  /* line 277, ../sass/screen.scss */
-  .findRace h2 {
+  /* line 297, ../sass/screen.scss */
+  .find h2 {
     border: none;
     margin: 0 0 1em;
     padding: 0 0 0.6em;
     text-align: center; }
-  /* line 283, ../sass/screen.scss */
-  .findRace label {
+  /* line 303, ../sass/screen.scss */
+  .find label {
     width: 31.81818%;
     float: left;
     margin-right: 4.54545%;
     display: inline;
     text-align: right;
-    padding: 0.3em;
+    padding: 0.35em 0;
     margin-bottom: 0.6em;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
-  /* line 290, ../sass/screen.scss */
-  .findRace select {
+  /* line 310, ../sass/screen.scss */
+  .find select {
     -webkit-appearance: none;
     -moz-appearance: none;
     margin: 0;
@@ -411,26 +407,129 @@ section {
     padding: 0.5em;
     background: url(../img/down_arrow_select.jpg) no-repeat right #dddddd;
     margin-bottom: 0.6em; }
-  /* line 303, ../sass/screen.scss */
-  .findRace input {
+  /* line 323, ../sass/screen.scss */
+  .find select:hover {
+    cursor: pointer; }
+  /* line 326, ../sass/screen.scss */
+  .find input {
     width: 63.63636%;
     float: right;
     margin-right: 0;
     *margin-left: -1em;
     display: inline;
-    margin-top: 0; }
+    margin-top: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; }
 
-/* line 310, ../sass/screen.scss */
+/* line 333, ../sass/screen.scss */
+.find:after {
+  content: "";
+  display: block;
+  clear: both; }
+
+/* line 339, ../sass/screen.scss */
+[type="text"], [type="password"] {
+  background-color: white;
+  border: 1px solid #01938A;
+  border-radius: 0.5em;
+  color: black;
+  font-size: 1em;
+  padding: 0.6em;
+  margin-bottom: 0.6em; }
+
+/* line 349, ../sass/screen.scss */
+input[type="date"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  margin: 0;
+  font-size: 1em;
+  border: none;
+  border-radius: 0.5em;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  width: 63.63636%;
+  float: right;
+  margin-right: 0;
+  *margin-left: -1em;
+  display: inline;
+  padding: 0.5em;
+  margin-bottom: 0.6em; }
+
+/* line 363, ../sass/screen.scss */
 .left {
   width: 48.97959%;
   float: left;
   margin-right: 2.04082%;
   display: inline; }
 
-/* line 314, ../sass/screen.scss */
+/* line 367, ../sass/screen.scss */
 .right {
   width: 48.97959%;
   float: right;
   margin-right: 0;
   *margin-left: -1em;
   display: inline; }
+
+/* line 372, ../sass/screen.scss */
+.login .left {
+  margin-left: 25%; }
+  /* line 374, ../sass/screen.scss */
+  .login .left label {
+    padding: 0.55em 0;
+    margin-bottom: 0.6em; }
+
+/* line 387, ../sass/screen.scss */
+.news h2 {
+  margin-bottom: 1em; }
+/* line 390, ../sass/screen.scss */
+.news a:nth-child(2) {
+  width: 59.18367%;
+  float: left;
+  margin-right: 2.04082%;
+  display: inline; }
+  /* line 392, ../sass/screen.scss */
+  .news a:nth-child(2) figure img {
+    width: 31.03448%;
+    float: left;
+    margin-right: 3.44828%;
+    display: inline;
+    max-width: 100%;
+    margin-top: 0.3em; }
+/* line 398, ../sass/screen.scss */
+.news a {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0.6em;
+  background-color: rgba(1, 147, 154, 0.3);
+  margin-bottom: 2.04082%;
+  border: none;
+  transition: background-color, 0.5s;
+  width: 38.77551%;
+  float: right;
+  margin-right: 0;
+  *margin-left: -1em;
+  display: inline; }
+  /* line 406, ../sass/screen.scss */
+  .news a h3 {
+    margin-bottom: 0.8em; }
+    /* line 408, ../sass/screen.scss */
+    .news a h3 span {
+      float: right;
+      font-size: 0.8em;
+      color: white; }
+  /* line 415, ../sass/screen.scss */
+  .news a figure img {
+    width: 47.36842%;
+    float: left;
+    margin-right: 5.26316%;
+    display: inline;
+    max-width: 100%;
+    margin-top: 0.3em;
+    border: 0.3em solid white; }
+/* line 422, ../sass/screen.scss */
+.news a:hover {
+  color: black;
+  background-color: rgba(1, 147, 154, 0.6); }
